User scrollbar + draw fixes
Added a scrollbar for users instead of rolling right off the bottom with
many players.
Fixed the Pixel Ratio not being taken into account with the bucket and
also changed mouse up event to be able to end lines outside of the
canvas area.

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -79,7 +79,7 @@ canvas {
         pointer-events: all;
 
         &[type="text"] {
-            outline: none;
+            outline: 0;
             border: solid 0.1em @default-color;
             border-radius: 4em;
             padding: 0.75em 1em;
@@ -91,10 +91,14 @@ button, input[type="submit"] {
     background: deepskyblue;
     color: white;
     cursor: pointer;
-    outline: none;
-    border: none;
+    outline: 0;
+    border: 0;
     border-radius: 4em;
     padding: 0.75em 1em 0.6em;
+
+    &::-moz-focus-inner {
+        border: 0;
+    }
 }
 
 #tools {
@@ -142,7 +146,7 @@ input[type=radio] {
         width: 23%;
         height: 2em;
         cursor: pointer;
-        outline: none;
+        outline: 0;
         background-color: transparent;
         -webkit-appearance: none;
         // * * * TRACK * * *
@@ -150,7 +154,7 @@ input[type=radio] {
             background: transparent;
         }
         &::-ms-track {
-            border: none;
+            border: 0;
             background: transparent;
             color: transparent;
         }
@@ -163,7 +167,7 @@ input[type=radio] {
             height: 2em;
             background-color: @default-color;
             border-radius: 100%;
-            border: none;
+            border: 0;
             cursor: pointer;
         }
 
@@ -293,7 +297,9 @@ input[type=radio] {
 
 #users {
     text-align: right;
+    overflow-y: auto;
     width: 400%;
+    height: 100%;
     margin: 0 0 0 -300%;
     padding: 0;
     list-style-type: none;
@@ -328,7 +334,7 @@ input[type=radio] {
 
     #nameIn {
         border: 0;
-        outline: none;
+        outline: 0;
         text-align: center;
         width: 15em;
     }
